--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
     "autoload": {
         "psr-4": {"Test\\": "./tests"},
         "files": ["src/loader.php"]
-    }
+    },
+    "repositories": [
+        {
+            "packagist": false
+        }
+    ]
 }
